<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_64"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tilUserId"
        android:textSize="@dimen/text_size_56"
        android:text="@string/app_name"
        android:textColor="@android:color/black" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tilPassword">

        <EditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginBottom="@dimen/margin_4"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/ic_person_outline"
            android:drawablePadding="@dimen/margin_16"
            android:inputType="textEmailAddress"
            android:hint="@string/user_id" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:drawablePadding="@dimen/margin_16"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawableRight="@drawable/ic_visibility"
            android:hint="@string/hint_password" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_below="@id/tilPassword"
        android:gravity="center">

        <Button
            android:id="@+id/btnAddUpdateUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorLoginBtnBg"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:text="@string/btn_login_title"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:textColor="@android:color/white"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/btn_cancel"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/forgot_password"
        android:textColor="@color/colorForgotPassword"
        android:layout_below="@id/llButtons"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:textColor="@android:color/white"
        android:background="@color/colorLoginBtnBg"
        android:layout_gravity="bottom|center"
        android:layout_below="@id/tvForgotPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_sign_up"/>

</RelativeLayout>