<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center"
        android:padding="@dimen/margin_8"
        android:text="@string/hint_forgot_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_8"
        android:text="@string/msg_enter_userid"
        android:textColor="@color/solid_black"
        android:textSize="@dimen/text_size_16" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_4"
            android:drawableStart="@drawable/ic_person_outline"
            android:drawableLeft="@drawable/ic_person_outline"
            android:drawablePadding="@dimen/margin_16"
            android:hint="@string/hint_enter_userid"
            android:inputType="text"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:gravity="center">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/txt_ok"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>