<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center"
        android:padding="@dimen/margin_8"
        android:text="@string/alert_heading_delete_user"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_8"
        android:text="@string/alert_msg_delete_user"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@color/solid_black" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:gravity="center">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/txt_ok"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>