<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center"
        android:padding="@dimen/margin_8"
        android:text="@string/dialog_title_change_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_4"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawableRight="@drawable/ic_visibility"
            android:drawablePadding="@dimen/margin_16"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_4"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawableRight="@drawable/ic_visibility"
            android:drawablePadding="@dimen/margin_16"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:gravity="center">

        <Button
            android:id="@+id/btnUpdatePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/txt_ok"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:background="@color/colorLoginBtnBg"
            android:text="@string/txt_reset"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>