<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_8"
    android:layout_marginLeft="@dimen/margin_8"
    android:layout_marginEnd="@dimen/margin_8"
    android:layout_marginRight="@dimen/margin_8"
    android:layout_marginTop="@dimen/margin_8"
    card_view:cardCornerRadius="@dimen/margin_4">

    <RelativeLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_8"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_below="@+id/tvName"/>

        <TextView
            android:id="@+id/tvRoleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_role"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_below="@+id/tvUserName"/>

        <TextView
            android:id="@+id/tvStatusName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_status"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_below="@+id/tvRoleName"/>

           <ImageButton
               android:id="@+id/ibChangePasswd"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/margin_16"
               android:layout_marginStart="@dimen/margin_8"
               android:layout_marginLeft="@dimen/margin_8"
               android:layout_marginRight="@dimen/margin_8"
               android:layout_marginEnd="@dimen/margin_8"
               android:layout_alignParentRight="true"
               android:layout_alignParentEnd="true"
               android:background="@color/white"
               android:src="@drawable/ic_change_password"/>

           <ImageButton
               android:id="@+id/ibDelete"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/margin_16"
               android:layout_marginLeft="@dimen/margin_8"
               android:layout_marginRight="@dimen/margin_8"
               android:layout_marginEnd="@dimen/margin_8"
               android:layout_marginStart="@dimen/margin_8"
               android:textColor="@android:color/black"
               android:layout_alignParentRight="true"
               android:layout_alignParentEnd="true"
               android:background="@color/white"
               android:layout_alignBottom="@id/tvStatusName"
               android:src="@drawable/ic_delete"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>